# agent-tools

./: .gitignore  00_SKILL_SPEC.md  ARCHITECTURE.md  Makefile  README.md  pyproject.toml  test_commit.py  test_workflow.py
.agent/configs/: rules.yaml
.github/workflows/: ci.yml  publish.yml
.superpowers/brainstorm/3595-1774147096/: .events  .server-info  test-roadmap.html
configs/: rules.yaml  schema.json
docs/superpowers/plans/: 2026-03-22-business-logic-simplification.md  2026-03-22-orchestrator-integration-tests-stage-2.md  2026-03-22-project-structure-reorganization.md  2026-03-22-test-infrastructure-stage-1.md  2026-03-22-tool-descriptions-optimization.md
docs/superpowers/specs/: 2026-03-22-business-logic-simplification-design.md  2026-03-22-git-sync-optimization-design.md  2026-03-22-project-structure-reorganization-design.md  2026-03-22-tool-descriptions-optimization-design.md
scripts/git-hooks/: pre-commit
skills/gh_smart_pr_create/: SKILL.md
skills/gh_smart_pr_merge/: SKILL.md
skills/git_smart_commit/: SKILL.md
skills/git_smart_sync/: SKILL.md
src/: cli.py  config.py  protocol.py  server.py
src/agent_tools/: config.py  context.py  protocol.py  server.py
src/agent_tools/configs/: rules.yaml  schema.json
src/agent_tools/core/models/: workflow.py
src/agent_tools/core/orchestrators/: __init__.py  gh_pr_create.py  gh_pr_merge.py  git_commit.py  git_release.py  git_sync.py
src/agent_tools/gh/: client.py
src/agent_tools/git/: __init__.py  branch.py  client.py  commit.py  diff.py  log.py  repo.py  transaction.py  types.py
src/agent_tools/infrastructure/clients/git/: __init__.py  branch.py  client.py  commit.py  diff.py  git_types.py  repo.py  transaction.py
src/agent_tools/infrastructure/clients/github/: client.py
src/agent_tools/infrastructure/config/: context.py  manager.py
src/agent_tools/infrastructure/config/resources/: rules.yaml  schema.json
src/agent_tools/orchestrators/: __init__.py  gh_pr_create.py  gh_pr_merge.py  git_commit.py  git_release.py  git_sync.py
src/agent_tools/server/: mcp_server.py
src/gh/: __init__.py  client.py
src/git/: commit.py  diff.py  repo.py  transaction.py  types.py
src/orchestrators/: __init__.py  commit.py  gh_pr_create.py  gh_pr_merge.py  git_commit.py  git_sync.py  pr.py  pr_create.py  pr_merge.py  sync.py
tests/: conftest.py  test_config.py  test_gh_pr_create_flow.py  test_git_client.py  test_git_commit_flow.py  test_git_sync_flow.py  test_infra.py  test_protocol.py
