[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kyson-mcp-agent-tools"
version = "0.1.2"
description = "Industrial-grade Agent Git Workflow Tools"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0",
    "jsonschema>=4.0.0",
    "mcp[cli]>=0.1.0",
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
kyson-mcp-agent-tools = "agent_tools.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_tools = ["configs/*.yaml", "configs/*.json"]
