[build-system]
requires = ["setuptools>=61.0"]
build_backend = "setuptools.build_meta"

[project]
name = "kyson-mcp-agent-tools"
version = "0.1.10"
description = "Industrial-grade Agent Git Workflow Tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PyYAML>=6.0",
    "jsonschema>=4.0.0",
    "mcp[cli]>=0.1.0",
    "fastmcp>=0.1.0",
]

[project.scripts]
kyson-mcp-agent-tools = "agent_tools.server:main"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "T20"]
ignore = ["E501"]
fixable = ["I", "F401"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_tools = ["configs/*.yaml", "configs/*.json"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff",
    "mypy",
    "types-pyyaml>=6.0.12.20250915",
]
