[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kyson-mcp-agent-tools"
version = "0.1.24"
description = "Industrial-grade Agent Git Workflow Tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PyYAML>=6.0",
    "jsonschema>=4.0.0",
    "mcp[cli]>=0.1.0",
    "fastmcp>=0.1.0",
]

[project.scripts]
kyson-mcp-agent-tools = "agent_tools.server.mcp_server:main"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "B", "T20"]
ignore = ["E501"]
fixable = ["I", "F401"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
check_untyped_defs = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_tools = ["infrastructure/config/resources/*.yaml", "infrastructure/config/resources/*.json"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff",
    "mypy",
    "types-pyyaml>=6.0.12.20250915",
]
